--- a/writings/index.html
+++ b/writings/index.html
@@ -171,6 +171,19 @@
               A beginner's guide to superposition
             </p>
           </article>
+
+          <article>
+            <a href="./202301160-complexity/">
+              <img src="./202301160-complexity/title-card.png" alt="Complexity Title Card" />
+            </a>
+            <h3>
+              <a href="./202301160-complexity/">A Not-so-Complex Guide to Complexity Theory</a>
+            </h3>
+            <span class="date-text">March 5th, 2023</span>
+            <p>
+              A physicist's guide to complexity theory
+            </p>
+          </article>
         </div>
 
         <h2>Research</h2>
