--- a/resume/index.html
+++ b/resume/index.html
@@ -34,7 +34,7 @@
         <article>
 
           <section id="overview">
-            <h2>Juan G Mendoza</h2>
+            <h2>Juan Gonzalez De Mendoza</h2>
             <nav class="flex">
               <a href="https://github.com/JuanGMendoza/">Github</a>
               
@@ -329,15 +329,6 @@
                   </a>
                   at The University of Texas at Austin
                 </i>
-                <br  />
-                <span class="inset-block">
-                  Class: PHY 303 Physical Science; measurement, mechanics, heat,
-                  energy, and power
-                </span>
-                <br  />
-                <span class="inset-block">
-                  Professor: Suzanne Jacobs
-                </span>
               </span>
               <span>
                 2018
