--- a/resume/index.html
+++ b/resume/index.html
@@ -61,6 +61,23 @@
                 <span>2021 - Present</span>
               </li>
             </ul>
+                        <div class="flex">
+              <span>
+                <b>&#x2022;</b>
+                Masters in Physics
+              </span>
+            </div>
+
+            <ul>
+              <li class="flex">
+                <span>
+                  The University of New Mexico
+                  <br  />
+                  
+                </span>
+                <span>2021 - 2023</span>
+              </li>
+            </ul>
             <div class="flex">
               <span>
                 <b>&#x2022;</b>
