removes planet longhorn and added GSA

--- a/resume/index.html
+++ b/resume/index.html
@@ -336,6 +336,24 @@
 
           <section id="affiliations">
             <h3>Professional Affiliations</h3>
+
+             <div class="flex">
+              <span>
+                <b>&#x2022;</b>
+                <i>
+                  <a href="https://planetlonghorn.org/">Physics and Astronomy Graduate Student Association: Communications Officer</a>
+                  at The University of New Mexico
+                </i>
+                <br  />
+              </span>
+              <span>
+                2022 - Present
+              </span>
+            </div>
+            <p class="inset-block">
+              Our graduate student association is responsible for providing professional and social outlets for the Masters and PhD students of the department. This includes outreach opportunities, biweekly social meetings at local breweries, and seasonal gatherings. I served by creating new events such as table tennis tournaments and winning them myself, and by creating and sending all the emails and newsletters for the organization.
+            </p>
+          </section>
             <!--  -->
             <div class="flex">
               <span>
@@ -381,25 +399,7 @@
               transfer students at UT.
             </p>
             <!--  -->
-            <div class="flex">
-              <span>
-                <b>&#x2022;</b>
-                <i>
-                  <a href="https://planetlonghorn.org/">Planet Longhorn</a>
-                  at The University of Texas at Austin
-                </i>
-                <br  />
-              </span>
-              <span>
-                2017 - 2019
-              </span>
-            </div>
-            <p class="inset-block">
-              Planet Longhorn is a student-run organization built to welcome,
-              acclimate, and ultimately enhance the exchange experience of
-              international students.
-            </p>
-          </section>
+           
 
           <section id="awards">
             <h3>Awards</h3>
