removed undergrad coursework and added public talks

--- a/resume/index.html
+++ b/resume/index.html
@@ -341,8 +341,8 @@
               <span>
                 <b>&#x2022;</b>
                 <i>
-                  <a href="https://planetlonghorn.org/">Physics and Astronomy Graduate Student Association: Communications Officer</a>
-                  at The University of New Mexico
+                  <a href="https://unmpandagsa.wixsite.com/home">Physics and Astronomy Graduate Student Association:</a>Communications Officer.
+                  At The University of New Mexico
                 </i>
                 <br  />
               </span>
@@ -351,7 +351,7 @@
               </span>
             </div>
             <p class="inset-block">
-              Our graduate student association is responsible for providing professional and social outlets for the Masters and PhD students of the department. This includes outreach opportunities, biweekly social meetings at local breweries, and seasonal gatherings. I served by creating new events such as table tennis tournaments and winning them myself, and by creating and sending all the emails and newsletters for the organization.
+              Our graduate student association is responsible for providing professional and social outlets for the Masters and PhD students of the department. I served by creating new events such as table tennis tournaments and winning them myself, and by creating and sending all the emails and newsletters for the organization.
             </p>
           </section>
             <!--  -->
@@ -427,28 +427,15 @@
           </section>
 
           <section id="coursework">
-            <h3>Relevant Coursework</h3>
-            <h4>Physics</h4>
+            <h3>Talks</h3>
             <ul>
               <li>
-                Graduate Quantum Mechanics I,
-                <a href="https://en.wikipedia.org/wiki/Steven_Weinberg">
-                  Dr. Weinberg
+                Quantum Key Distribution and Cryptography, CQuIC summer talk: 
+                <a href="https://www.youtube.com/watch?v=SddJ4ZY7tCE">
+                  Recording
                 </a>
               </li>
-              <li>
-                Quantum Information,
-                <a href="https://en.wikipedia.org/wiki/Scott_Aaronson">
-                  Dr. Aaronson
-                </a>
-              </li>
-              <li>Quantum Mechanics I, Dr. Caceres</li>
-              <li>Quantum Mechanics II, Dr. Yeazell</li>
-              <li>Waves and Optics, Dr. Heinzen</li>
-              <li>Modern Physics, Dr. Sitz</li>
-              <li>Modern Physics Lab, Dr. Fink</li>
-              <li>Classical Electrodynamics, Dr. Caceres</li>
-            </ul>
+
           </section>
 
           <section id="contact">
