--- a/resume/index.html
+++ b/resume/index.html
@@ -119,22 +119,21 @@
             <div class="flex">
               <span>
                 <b>&#x2022;</b>
-                <i>Quantum Scattering</i>
+                <i>QCVV Methods at Sandia's Quantum Performance Lab</i>
                 <br  />
                 <span class="inset-block">
                   Advisor:
                   <a href="http://order.ph.utexas.edu/people/Reichl.htm">
-                    Dr. Reichl
+                    Corey Ostrove, Robin Blume-Kohout
                   </a>
                 </span>
               </span>
               <span>
-                Summer 2020 - Fall 2020
+                Summer 2023 - Present
               </span>
             </div>
             <p class="inset-block">
-              Analyzed Wigner and Einsenbud reaction matrix scattering theory
-              to understand nuclear scaterring problems better.
+              Automated model selection with First-Order Gauge-Invariant Parameters
             </p>
             <!--  -->
             <div class="flex">
@@ -188,23 +187,6 @@
               the control and gel with growing bacteria on the surface to compare
               their water evaporation rate. Unfortunately, no correlation was found
               between biofilm covered gel and evaporation rates.
-            </p>
-            <!--  -->
-            <div class="flex">
-              <span>
-                <b>&#x2022;</b>
-                <i>General Relativity</i>
-                <br  />
-                <span class="inset-block">
-                  Advisor: Dr. Matzner
-                </span>
-              </span>
-              <span>
-                Fall 2018 - Spring 2019
-              </span>
-            </div>
-            <p class="inset-block">
-              Learned about Einstein's field equations and its applications.
             </p>
           </section>
 
@@ -430,9 +412,15 @@
             <h3>Talks</h3>
             <ul>
               <li>
-                Quantum Key Distribution and Cryptography, CQuIC summer talk: 
+                06/23 Quantum Key Distribution and Cryptography, CQuIC summer talk: 
                 <a href="https://www.youtube.com/watch?v=SddJ4ZY7tCE">
                   Recording
+                </a>
+              </li>
+              <li>
+                03/24 Automated Model Selection with First-Order Gauge-Invariant Parameters, APS March Meeting: 
+                <a href="https://meetings.aps.org/Meeting/MAR24/Session/G50.2">
+                  Abstract
                 </a>
               </li>
 
