--- a/resume/index.html
+++ b/resume/index.html
@@ -107,14 +107,7 @@
 
           <section class="experience">
             <h3>Research Experience</h3>
-            <p>
-              All the research below was conducted in
-              <a href="https://chaos.utexas.edu/people/undergraduate-students/juan-gonzalez-de-mendoza">
-                The Center for Nonlinear Dynamics
-              </a>
-              and The Center for Complex Quantum Systems at The University of
-              Texas at Austin
-            </p>
+
             <!--  -->
             <div class="flex">
               <span>
@@ -122,10 +115,9 @@
                 <i>QCVV Methods at Sandia's Quantum Performance Lab</i>
                 <br  />
                 <span class="inset-block">
-                  Advisor:
-                  <a href="http://order.ph.utexas.edu/people/Reichl.htm">
+                  Advisors:
                     Corey Ostrove, Robin Blume-Kohout
-                  </a>
+                  
                 </span>
               </span>
               <span>
@@ -189,7 +181,26 @@
               between biofilm covered gel and evaporation rates.
             </p>
           </section>
+        <section id="Talks">
+            <h3>Public Talks</h3>
+            <ul>
 
+                <li>
+                03/24 Automated Model Selection with First-Order Gauge-Invariant Parameters, APS March Meeting: 
+                <a href="https://meetings.aps.org/Meeting/MAR24/Session/G50.2">
+                  Abstract
+                </a>
+              </li>
+
+              <li>
+                06/23 Quantum Key Distribution and Cryptography, CQuIC summer talk: 
+                <a href="https://www.youtube.com/watch?v=SddJ4ZY7tCE">
+                  Recording
+                </a>
+              </li>
+
+
+          </section>
           <section class="experience">
             <h3>Professional Experience</h3>
             <!-- -->
@@ -408,23 +419,7 @@
             <img src="./assets/sensing.jpeg" alt="RAS Robothon Award" width="250" height="200" />
           </section>
 
-          <section id="coursework">
-            <h3>Talks</h3>
-            <ul>
-              <li>
-                06/23 Quantum Key Distribution and Cryptography, CQuIC summer talk: 
-                <a href="https://www.youtube.com/watch?v=SddJ4ZY7tCE">
-                  Recording
-                </a>
-              </li>
-              <li>
-                03/24 Automated Model Selection with First-Order Gauge-Invariant Parameters, APS March Meeting: 
-                <a href="https://meetings.aps.org/Meeting/MAR24/Session/G50.2">
-                  Abstract
-                </a>
-              </li>
-
-          </section>
+          
 
           <section id="contact">
             <h3>Contact</h3>
