--- a/resume/index.html
+++ b/resume/index.html
@@ -112,7 +112,8 @@
             <div class="flex">
               <span>
                 <b>&#x2022;</b>
-                <i>QCVV Methods at Sandia's Quantum Performance Lab</i>
+                <i><a href="https://qpl.sandia.gov">
+                QCVV Methods at Sandia's Quantum Performance Lab</a></i>
                 <br  />
                 <span class="inset-block">
                   Advisors:
@@ -186,9 +187,9 @@
             <ul>
 
                 <li>
-                03/24 Automated Model Selection with First-Order Gauge-Invariant Parameters, APS March Meeting: 
+                03/24 Model Selection with First-Order Gauge-Invariant Parameters,  
                 <a href="https://meetings.aps.org/Meeting/MAR24/Session/G50.2">
-                  Abstract
+                  APS March Meeting abstract
                 </a>
               </li>
 
