consolidated teaching assistanships

--- a/resume/index.html
+++ b/resume/index.html
@@ -225,7 +225,7 @@
               </span>
             </div>
             <p class="inset-block">
-              Founded <a href="https://www.quantumcomputinginc.com/qubt-u/">QUBT University</a>, a program designed to provide our quantum software for free to students all over the U.S. facilitating the entry point into the quantum computing field for everyone.
+              Founded "QUBT University", a program designed to provide our quantum software for free to students all over the U.S. facilitating the entry point into the quantum computing field for everyone.
             </p>
 
             <!--  -->
@@ -235,69 +235,24 @@
                 <i>Undergraduate Teaching Assistant</i>
                 <br  />
                 <span class="inset-block">
-                  Class: PHY 302L Electricity and Magnetism, Light, Atomic and
-                  Nuclear Physics
+                  Classes: "Electricity and Magnetism, Light, Atomic and
+                  Nuclear Physics", "Modern Physics Laboratory" & "Physical Science; measurement, mechanics, heat,
+                  energy, and power" (PHY 302L, PHY 353L & PHY 303)
                 </span>
                 <br  />
                 <span class="inset-block">
-                  Professor: Dr. Labun
+                  Professors: Dr. Labun, Dr. Sitz & Dr. Jacobs
                 </span>
               </span>
               <span>
-                Summer 2020
+                2019-2020
               </span>
             </div>
             <p class="inset-block">
-              Assisted students in understanding electromagnetism, circuits,
-              and modern physics concepts such as special relativity.
+              Assisted students in class and in the lab. Created and delivered lectures. Graded homeworks.
             </p>
             <!--  -->
-            <div class="flex">
-              <span>
-                <b>&#x2022;</b>
-                <i>Undergraduate Teaching Assistant</i>
-                <br  />
-                <span class="inset-block">
-                  Class: PHY 353L Modern Physics Laboratory
-                </span>
-                <br  />
-                <span class="inset-block">
-                  Professor: Dr. Sitz
-                </span>
-              </span>
-              <span>
-                Spring 2020
-              </span>
-            </div>
-            <p class="inset-block">
-              Assisted students in understanding modern physics concepts,
-              setting up experiments, and writting lab reports
-            </p>
-            <!--  -->
-            <div class="flex">
-              <span>
-                <b>&#x2022;</b>
-                <i>Undergraduate Teaching Assistant</i>
-                <br  />
-                <span class="inset-block">
-                  Class: PHY 303 Physical Science; measurement, mechanics, heat,
-                  energy, and power
-                </span>
-                <br  />
-                <span class="inset-block">
-                  Professor: Suzanne Jacobs
-                </span>
-              </span>
-              <span>
-                Spring and Fall 2019
-              </span>
-            </div>
-            <p class="inset-block">
-              Assisted professor in answering questions in-class, gave my own
-              lectures to introduce non-science majors to the concept of dark
-              matter, and helped students setting up experiments.
-            </p>
-            <!--  -->
+            
             <div class="flex">
               <span>
                 <b>&#x2022;</b>
