one last resume update for the night

--- a/resume/index.html
+++ b/resume/index.html
@@ -235,9 +235,7 @@
                 <i>Undergraduate Teaching Assistant</i>
                 <br  />
                 <span class="inset-block">
-                  Classes: "Electricity and Magnetism, Light, Atomic and
-                  Nuclear Physics", "Modern Physics Laboratory" & "Physical Science; measurement, mechanics, heat,
-                  energy, and power" (PHY 302L, PHY 353L & PHY 303)
+                  Classes: "Electricity and Magnetism", "Modern Physics Laboratory" & "Physical Science: mechanics" (PHY 302L, PHY 353L & PHY 303)
                 </span>
                 <br  />
                 <span class="inset-block">
@@ -245,7 +243,7 @@
                 </span>
               </span>
               <span>
-                2019-2020
+                2019 - 2020
               </span>
             </div>
             <p class="inset-block">
