jk this is the last one

--- a/resume/index.html
+++ b/resume/index.html
@@ -112,8 +112,8 @@
             <div class="flex">
               <span>
                 <b>&#x2022;</b>
-                <i><a href="https://qpl.sandia.gov">
-                QCVV Methods at Sandia's Quantum Performance Lab</a></i>
+                <i>QCVV Methods at<a href="https://qpl.sandia.gov">
+                 Sandia's Quantum Performance Lab</a></i>
                 <br  />
                 <span class="inset-block">
                   Advisors:
