--- a/writings/index.html
+++ b/writings/index.html
@@ -137,10 +137,9 @@
           <h3>Research</h3>
 
         <div class="article-list">
-          <h3>Refining quantum computing models by removing gauge freedom (PhD Candidacy Exam)</h3>
           <article>
             <h4>
-              <a href="./20241106-AMSFOGI/Candidacy.pdf">Automated model selection with first-order gauge invariant quantities</a>
+              <a href="./20241106-AMSFOGI/Candidacy.pdf">Refining quantum computing models by removing gauge freedom (PhD Candidacy Exam)</a>
             </h4>
             <span class="date-text">November 6th, 2024</span>
           </article>
