--- a/writings/index.html
+++ b/writings/index.html
@@ -139,7 +139,7 @@
         <div class="article-list">
           <article>
             <h4>
-              <a href="./20241106-AMSFOGI/Candidacy.pdf">Refining quantum computing models by removing gauge freedom (PhD Candidacy Exam)</a>
+              <a href="./20241106-AMSFOGI/Candidacy.pdf">Refining quantum computing models by removing gauge freedom (PhD candidacy exam)</a>
             </h4>
             <span class="date-text">November 6th, 2024</span>
           </article>
